Fix colour contrast and text content in no results text

--- a/app/assets/stylesheets/nla/_dark-mode.scss
+++ b/app/assets/stylesheets/nla/_dark-mode.scss
@@ -22,7 +22,9 @@
     }
   }
   
-  h1 {
+  h1,
+  h2,
+  h3 {
     color: $body-color-dark;
   }
 
